Updates from Overleaf

--- a/inc/preamble.tex
+++ b/inc/preamble.tex
@@ -46,7 +46,7 @@
     colorlinks, urlcolor={black}, % Все ссылки черного цвета, кликабельные
     linkcolor={black}, citecolor={black}, filecolor={black},
     pdfauthor={Амет Умеров},
-    pdftitle={Разработка виртуальной инфраструктуры для реализации облачных услуг}
+    pdftitle={Нейросетевые методы обработки текстов на естественном языке}
 }
 
 % Оформление библиографии и подрисуночных записей через точку
@@ -69,7 +69,7 @@
 % Отступы у страниц
 \usepackage{geometry}
 \geometry{left=3cm}
-\geometry{right=1cm}
+\geometry{right=1.5cm}
 \geometry{top=2cm}
 \geometry{bottom=2cm}
 
