intro done, working on related work

--- a/inc/0-intro.tex
+++ b/inc/0-intro.tex
@@ -1,4 +1,36 @@
 \anonsection{Введение}
- bla bla bla
+\par В эпоху больших данных чрезвычайно важно извлекать информацию из текстовых данных. В действительности, ежедневно люди генерируют сотни миллионов текстов: поисковые запросы, новостные заметки, публикации в социальных сетях, личные сообщения, книги, статьи и многое другое. И каждый такой текст, в той или иной мере, содержит в себе информацию, которая может быть полезна различным компаниям, исследовательским институтам и, не в последнюю очередь, самим людям.
+\par Задача анализа текстовой информации не нова, и в прошлом исследователи разрабатывали подходы к её решению, в том числе и с использованием методов машинного обучения. И такие подходы применяются в индустриальных системах. В частности, в задаче информационного поиска используется алгоритм TF-IDF\footnote{https://www.colta.ru/articles/specials/4070-kak-rabotayut-poiskovye-sistemy}. Так-же, долгое время классические подходы машинного обучения были составной частью систем статистического машинного перевода~\cite{statmt-book}. Такие системы были развернуты в крупнейших сервисах онлайн перевода: Google Translate\footnote{https://translate.google.com/?hl=ru}, Microsoft Translator\footnote{https://www.bing.com/translator} и Яндекс.Переводчик\footnote{https://translate.yandex.ru/}.
+
+\par Тем не менее, с усложнением задач, а так же с появлением более строгих требований к качеству извлекаемой из текста информации, стало очевидно, что классических методов машинного обучения может быть недостаточно. Методы, основанные на нейронных сетях, показали свою эффективность во многих задачах анализа текста на естественном языке и уже внедряются индустриальные системы. Например, вышеупомянутый сервис онлайн перевода Google Translate перешел на нейросетевую модель в 2016 году\footnote{https://www.blog.google/products/translate/found-translation-more-accurate-fluent-sentences-google-translate/}. Пользователи отметили значительное улучшение качества перевода после данного перехода\footnote{https://www.washingtonpost.com/news/innovations/wp/2016/10/03/google-translate-is-getting-really-really-accurate/}. В то же время Яндекс.Переводчик прешел на гибридную систему машинного перевода\footnote{https://yandex.com/company/blog/one-model-is-better-than-two-yu-yandex-translate-launches-a-hybrid-machine-translation-system/}, использующую как статистический перевод, так и модель на основе нейросети.
+
+\par Вполне ожидаемо, что нейросетевые методы машинного обучения покажут себя лучше чем классические системы. Ранее это уже было продемонстрировано в задачах анализа изображений. В 2012 году, в рамках соревнования ImageNet LSVRC-2010 группой исследователей было впервые продемонстрировано~\cite{alexnet}, что нейросетевая модель AlexNet значительно превосходит все существовавшие до нее модели в задаче классификации изображений. Это можно увидеть на рисунке \ref{imagenet}.
+\addimg{imagenet}{0.35}{Значения ошибки моделей-участников соревнования ImageNet}{imagenet}
+\par Уже образовался класс задач, в которых качество работы Нейросетевых моделей превышает таковое для человека. Среди них: классификация изображений~\cite{imagenet-human} и ответы на вопросы по контексту\footnote{https://rajpurkar.github.io/SQuAD-explorer/}. В то же время, нейронные сети были адаптированы под множество задач обработки текста на естественном языке, к примеру:
+\begin{itemize}
+    \item Классификация текстов
+        \begin{itemize}
+            \item Анализ сентимента
+            \item Классификация эмоций
+            \item Распознавания токсичных текстов
+        \end{itemize}
+    \item Генерация текста
+    \item Языковое моделирование
+    \item Идентификация автора текста
+    \item Разрешение анафоры
+    \item Машинный перевод
+    \item Маркировка последовательностей
+        \begin{itemize}
+            \item Распознавание именованных сущностей
+            \item Разметка частей речи
+            \item Определение границ предложения
+        \end{itemize}
+    \item Разметка семантических ролей
+    \item Логический вывод по тексту
+    \item Определение парафразы
+\end{itemize}
+
+\par Однако, нейросетевые метода анализа текстов не лишены недостатков. С одной стороны это общие проблемы нейросетевых моделей во всех областях. С индустриальной точки зрения это прежде всего тяжеловесность моделей. Самые современные модели могут включать в себя миллиарды параметров и могут весить несколько гигабайт. Из этой проблемы вытекает ещё одна - невысокая скорость работы нейросетевых моделей. Во время работы модель выполняет огромное количество операция сложения и умножения, в т.ч и матриц. Крупные компании вынуждены создавать специальные микросхемы\footnote{https://www.techradar.com/news/world-of-tech/google-made-its-ai-smarter-by-building-its-own-custom-chips-1321703} (ASIC), для оптимизации времени работы. С другой стороны это специфичные проблемы связанные с обработкой текста. Например крайне реалистичная генерация текста современными языковыми моделями. Ученые и политики обеспокоены\footnote{https://www.theguardian.com/technology/2019/feb/14/elon-musk-backed-ai-writes-convincing-news-fiction} тем, что такие модели можно использовать для генерации огромного количества фейковой информации или трудно-отличимой пропаганды. Так же стоит отметить проблемы приватности пользовательских данных, когда нейросетевая модель, обученная на каком-то наборе текстов, не может "забыть" один из текстов, таким образом, нарушается право пользователя полностью удалить все данные связанные с ним.
+\par Данная работа организована следующим образом: в первом разделе будет приведен обзор современных подходов в области нейросетевого анализа текста по различным направлениям и аспектам; во втором разделе будут подробно разобраны преимущества нейросетевых методов, а так представлены результаты экспериментов по задачам текстовой классификации и разметке семантических ролей с английскими и русскими текстами соответственно; во третьем разделе будут подробно разобраны некоторые недостатки нейросетевого подхода, в частности будут предствлены возможные пути решения проблем тяжеловесности и скорости работы моделей; в заключении будет дано обобщение всех вышеобозначенных преимуществ и недостатков и будет сформулирован вывод о допустимости и необходимости использования нейросетевых методов в исследовательских и индустриальных целях; в приложении будет приведен исходный код для экспериментов из раздела 2.
 
 \clearpage
