--- a/inc/1-literature.tex
+++ b/inc/1-literature.tex
@@ -1,8 +1,9 @@
 \section{Обзор современных подходов к использованию нейросетевых методов при анализе текста} \label{literature}
 
+\par Нейросетевые методы вообще, и в применении для анализа текста на естественном языке в частности, являются горячей темой среди исследователей по всему миру. Каждый день публикуются десятки статей на данную тематику, а исследовательские группы, занимающиеся разработкой новых подходов к применению нейронных сетей, есть во всех крупных компаниях и универститетах. В данном разделе будет приведен обзор последних достижений в этой сфере.
 
+\par В первую очередь, необходимо упомянуть работу \cite{attn-all-need}, которая в свою очередь является глубоким развитием идей механизма внимания(Attention), впервые представленном в~\cite{attn-original}.
 %%--
 %\addimg{full_virt}{0.35}{Архитектура полной виртуализации}{full-virt}
-bla bla bla
 
 \clearpage
