added bert to related work, need to add openai gpt

--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -15,6 +15,18 @@
     
 \bibitem{attn-original}
     Bahdanau D., Cho K., Bengio Y. Neural machine translation by jointly learning to align and translate //arXiv preprint arXiv:1409.0473. – 2014.
+    
+\bibitem{lstm}
+    Hochreiter S., Schmidhuber J. Long short-term memory //Neural computation. – 1997. – Т. 9. – №. 8. – С. 1735-1780.
+    
+\bibitem{gru}
+    Chung J. et al. Empirical evaluation of gated recurrent neural networks on sequence modeling //arXiv preprint arXiv:1412.3555. – 2014.
+    
+\bibitem{encoder-decoder}
+    Sutskever I., Vinyals O., Le Q. V. Sequence to sequence learning with neural networks //Advances in neural information processing systems. – 2014. – С. 3104-3112.
+    
+\bibitem{glue}
+    Wang A. et al. Glue: A multi-task benchmark and analysis platform for natural language understanding //arXiv preprint arXiv:1804.07461. – 2018.
 
 \end{thebibliography}
 \endgroup
